fix nav active for current route; fix overflow class

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -171,10 +171,6 @@ a.username{
 
 @media (max-width: 320px) {
   .sidenav li > a.overflow {
-    line-height: 1.25em;
-    height: auto;
-  }
-  .sidenav li > a#less-overflow {
     line-height: 2.5em;
     height: auto;
   }
